--- a/404.html
+++ b/404.html
@@ -1,17 +1,4 @@
-<script src="http://cdn.bootcss.com/purl/2.3.1/purl.min.js"></script>
-
-<script>
-var url = purl();
-if (url.attr('host') == 'luthree.tk') {
-    var old_url = url.attr('source');
-    var new_url = old_url.replace('luthree.tk', "luthr.ee");
-    window.location.replace(new_url); 
-}else if (url.attr('host') == 'www.luthree.tk') {
-    var old_url = url.attr('source');
-    var new_url = old_url.replace('www.luthree.tk', "luthr.ee");
-    window.location.replace(new_url);
-}else {
-    window.location.href="https://luthr.ee";
-}
-    
-</script>
+域名更换通知：<br>
+Luthree's Blog的域名自2022.2.1日起正式由 luthree.tk 变更为 luthr.ee，特此声明。
+<Br><br>
+<a herf="https://luthr.ee">luthr.ee</a>
